--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -9,8 +9,10 @@
     헤더 입니다 <!-- A#2-->
 </header>
 <article>
+    본문입니다.<!-- A#3-->
 </article>
 <footer>
+    푸터 입니다. <!-- A#3-->
 </footer>
 </body>
 </html>
