--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -11,6 +11,8 @@
 </header>
 <article>
     본문입니다.<!-- A#3-->
+    <section>기사 1</section>
+    <section>기사 2</section>
 </article>
 <footer>
     푸터 입니다. <!-- A#3-->
