--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -11,6 +11,7 @@
 
     <div>about</div><!--A#8-->
     <div>관리자</div><!--B#6-->
+    <div>detail-page</div><!--A#11 [feature/detail-page]-->
 </header>
 <article>
     본문입니다.<!-- A#3-->
