--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -11,6 +11,7 @@
 
     <div>about</div><!--A#8-->
     <div>관리자</div><!--B#6-->
+    <div>장바구니</div><!--B12 [feature/cart]-->
 </header>
 <article>
     본문입니다.<!-- A#3-->
